tests/fail/fibers/fibers_threads_swap.stderr
error: Undefined Behavior: body of the fiber 2 has terminated on the thread 2, but it was created as the body of thread 1
  --> tests/fail/fibers/fibers_threads_swap.rs:LL:CC
   |
LL | ...   s.spawn(body);
   |       ^^^^^^^^^^^^^ Undefined Behavior occurred due to this code
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: this is on thread `unnamed-ID`
   = note: this error occurred while pushing a call frame onto an empty stack
   = note: the span indicates which code caused the function to be called, but may not be the literal call site

error: aborting due to 1 previous error

